--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Prac-js</title>
     <link rel="shotcut icon" href="img/settings.png" type="img/x-icon">
     <link rel="stylesheet" href="starting/style.css">
+   
 </head>
 <body>
-    
+    <h1> Probemos </h1>
+  <script src="index.js"></script>
 </body>
 </html>
