--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prac-js</title>
     <link rel="shotcut icon" href="img/settings.png" type="img/x-icon">
-    <link rel="stylesheet" href="starting/style.css">
+    <link rel="stylesheet" href="Estilos/style.css">
    
 </head>
 <body>
