--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
   
-  <section class="registro">
+  <!-- <section class="registro">
     
     <label><input type="text" name="name" placeholder="Escribe tu nombre" max="40" min="10"></label>
     <label><input type="password"></label>
     <label><input type="email"></label>
-    <!--Botones de reinicio para Formulario-->
+  
 
     <label><input type="sumbit"></label>
     <label ><input type="reset"></label>
@@ -32,8 +32,10 @@
   <video src="GIF/video2.mp4" autoplay muted loop>
    
   </video>
- 
+  -->
     
+  <script src="index.js"></script>
+
 </body>
 </html>
 
