--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MSP</title>
     <link rel="stylesheet" href="Readme.md">
-    <link rel="stylesheet" href="index.js">
+
     <link rel="stylesheet" href="style.css">
     <link rel="shorcut icon" href="GIF/-79.jpg" type="image/icon">
 </head>
@@ -15,7 +15,7 @@
 <body>
   
   
-
+<script src="index.js"></script>
 
 </body>
 </html>
