--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
   
 <script src="index.js"></script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="pie-de-pagina"> Pruebas de código js para entender mejor el funcionamiento y comportamiento de este codigo popular: <a href="https://www.youtube.com/watch?v=z95mZVUcJ-E&t=104s" id="URL">Enlace</a> </footer>
 </body>
 </html>
 
