--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="Readme.md">
 
     <link rel="stylesheet" href="style.css">
-    <link rel="shorcut icon" href="GIF/-79.jpg" type="image/icon">
+    <link rel="shortcut icon" href="GIF/-79.jpg" type="image/icon">
 </head>
- <!--Pagina de Registro-->
+ <!--Pag de Register-->
 
 <body>
   
@@ -24,13 +24,16 @@
 
 
 
+<form action="index.php" id="acceso">
+<label >
+    <input type="text" name="name " placeholder="Write your name" required> 
+</label>
+</form>
 
-
-
-
-
-<footer class="pie-de-pagina"> Pruebas de código js para entender mejor el funcionamiento y comportamiento de este codigo popular: <a href="https://www.youtube.com/watch?v=z95mZVUcJ-E&t=104s" id="URL">Enlace</a> </footer>
+<footer class="pie-de-pagina"> test de code js para understand best el funcionamiento y comportamiento de este codigo popular: <a href="https://www.youtube.com/watch?v=z95mZVUcJ-E&t=104s" id="URL">Enlace</a> </footer>
 </body>
+
+
 </html>
 
 
